fix(DisplayOptoinsMenu): fix text vertical align.

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -13281,7 +13281,6 @@ span.ref-link-color-3 {color: blue}
 
 .texts-properties-menu .int-en,
 .texts-properties-menu .int-he {
-  height: 18px;
   align-content: center;
 }
 
